--- a/mapp.html
+++ b/mapp.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>My Web Page!</title>
+        <style>
+        ul {
+          text-align: center;
+          font-size-adjust: auto;
+        }
+        </style>
     </head>
     <body>
       <h2>Click below to check Abdul Rauf's details</h2>
