Updated mapp to 50%

--- a/mapp.html
+++ b/mapp.html
@@ -5,7 +5,7 @@
         <style>
         ul {
           text-align: center;
-          font-size-adjust: auto;
+          width: 50%;
         }
         </style>
     </head>
