--- a/mapp.html
+++ b/mapp.html
@@ -5,7 +5,7 @@
         <style>
         ul {
           text-align: center;
-          width: 50%;
+          font-size: 100%;
         }
         </style>
     </head>
