--- a/mapp.html
+++ b/mapp.html
@@ -3,18 +3,21 @@
     <head>
         <title>My Web Page!</title>
         <style>
-        ul {
+        div {
           text-align: center;
-          font-size: 100%;
+          font-size: 150%;
+          padding: 10px;
         }
         </style>
     </head>
     <body>
+      <div>
       <h2>Click below to check Abdul Rauf's details</h2>
       <ul>
         <li> <a href="CV_Abdul 2020_03.pdf">CV</a></li>
         <li> <a href="https://www.iitp.ac.in">IITP Website</a></li>
         <li> <a href="https://www.icad.com">ICAD</a></li>
       </ul>
+    </div>
     </body>
 </html>
