--- a/mapp.html
+++ b/mapp.html
@@ -4,19 +4,20 @@
         <title>My Web Page!</title>
         <style>
         div {
-          text-align: center;
+          align-items: baseline;
           font-size: 150%;
-          padding: 10px;
+          padding: 100px;
         }
         </style>
     </head>
     <body>
       <div>
-      <h2>Click below to check Abdul Rauf's details</h2>
-      <ul>
+      <h1>Click below to check Abdul Rauf's details</h1>
+      <ul><h2>
         <li> <a href="CV_Abdul 2020_03.pdf">CV</a></li>
         <li> <a href="https://www.iitp.ac.in">IITP Website</a></li>
         <li> <a href="https://www.icad.com">ICAD</a></li>
+      </h2>
       </ul>
     </div>
     </body>
