changed background color

--- a/mapp.html
+++ b/mapp.html
@@ -5,6 +5,7 @@
         <style>
         div {
           align-items: baseline;
+          background-color: #989595;
           font-size: 150%;
           padding: 100px;
         }
@@ -13,12 +14,11 @@
     <body>
       <div>
       <h1>Click below to check Abdul Rauf's details</h1>
-      <ul><h2>
-        <li> <a href="CV_Abdul 2020_03.pdf">CV</a></li>
-        <li> <a href="https://www.iitp.ac.in">IITP Website</a></li>
-        <li> <a href="https://www.icad.com">ICAD</a></li>
-      </h2>
-      </ul>
+      <table>
+        <tr><th> <a href="CV_Abdul 2020_03.pdf">CV</a></th></tr>
+        <tr><th>  <a href="https://www.iitp.ac.in">IITP Website</a></th></tr>
+        <tr><th>  <a href="https://www.icad.com">ICAD</a></th></tr>
+    </table>
     </div>
     </body>
 </html>
