changed background color

--- a/mapp.html
+++ b/mapp.html
@@ -4,10 +4,12 @@
         <title>My Web Page!</title>
         <style>
         div {
-          align-items: baseline;
-          background-color: #989595;
+          background-color: #40c35e;
           font-size: 150%;
           padding: 100px;
+        }
+        table {
+          width: 50%;
         }
         </style>
     </head>
