Updated mapp file

--- a/mapp.html
+++ b/mapp.html
@@ -7,20 +7,22 @@
           background-color: #40c35e;
           font-size: 150%;
           padding: 100px;
+          margin: 100px;
         }
-        table {
+        div {
+          text-align: center;
           width: 50%;
         }
         </style>
     </head>
     <body>
       <div>
-      <h1>Click below to check Abdul Rauf's details</h1>
-      <table>
-        <tr><th> <a href="CV_Abdul 2020_03.pdf">CV</a></th></tr>
-        <tr><th>  <a href="https://www.iitp.ac.in">IITP Website</a></th></tr>
-        <tr><th>  <a href="https://www.icad.com">ICAD</a></th></tr>
-    </table>
+        <h1>
+          Click below to check Abdul Rauf's details<br /><br />
+          <a href="CV_Abdul 2020_03.pdf">CV</a><br />
+          <a href="https://www.iitp.ac.in">IITP Website</a><br />
+          <a href="https://www.icad.com">ICAD</a><br />
+          </h1>
     </div>
     </body>
 </html>
