Updated mapp file

--- a/mapp.html
+++ b/mapp.html
@@ -4,7 +4,7 @@
         <title>My Web Page!</title>
         <style>
         div {
-          background-color: #40c35e;
+          background-color: lightblue;
           font-size: 150%;
           padding: 100px;
           margin: 100px;
